Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103733

[Windows] setProcessDpiAwarenessContext(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2) failed on certain machines

XMLWordPrintable

    • Windows
    • 4a2c31103c (qt/qtbase/dev) 4a2c31103c (qt/tqtc-qtbase/dev) 9e6f83307d (qt/qtbase/6.4) 9e6f83307d (qt/tqtc-qtbase/6.4) 6e6a263528 (qt/qtbase/6.3) 6e6a263528 (qt/tqtc-qtbase/6.3)

      There are warnings in users logs. 

      setProcessDpiAwarenessContext(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2) failed: COM error 0x57 (Unknown error 0x057)
      

      It's not reproduced for me locally, but I suppose it may happen on some legacy Win 10 editions.

      0x057 error is ERROR_INVALID_PARAMETER, so it seems as DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2 just is not supported on certain user's machines.

      According to MSDN, DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2 is supported only since Creators Update of Windows 10, and is not available on earlier versions of the operating system. https://docs.microsoft.com/en-us/windows/win32/hidpi/dpi-awareness-context

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes