src/plugins/platforms/windows/qwindowscontext.cpp
@@ -416,21 +416,19 @@ void QWindowsContext::setProcessDpiAwareness(QtWindows::ProcessDpiAwareness dpiA
     }
 }
 
-void QWindowsContext::setProcessDpiV2Awareness()
+bool QWindowsContext::setProcessDpiV2Awareness()
 {
     qCDebug(lcQpaWindows) << __FUNCTION__;
     const BOOL ok = SetProcessDpiAwarenessContext(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2);
-    if (ok) {
-        QWindowsContextPrivate::m_v2DpiAware = true;
-    } else {
+    if (!ok) {
         const HRESULT errorCode = GetLastError();
-        // ERROR_ACCESS_DENIED means set externally (MSVC manifest or external app loading Qt plugin).
-        // Silence warning in that case unless debug is enabled.
-        if (errorCode != ERROR_ACCESS_DENIED || lcQpaWindows().isDebugEnabled()) {
-            qWarning().noquote().nospace() << "setProcessDpiAwarenessContext(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2) failed: "
-                << QWindowsContext::comErrorString(errorCode);
-        }
+        qCWarning(lcQpaWindows).noquote().nospace() << "setProcessDpiAwarenessContext(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE_V2) failed: "
+            << QWindowsContext::comErrorString(errorCode);
+        return false;
     }
+
+    QWindowsContextPrivate::m_v2DpiAware = true;
+    return true;
 }
 
 bool QWindowsContext::isDarkMode()
